--- a/config.toml
+++ b/config.toml
@@ -616,7 +616,8 @@ pluralizeListTitles     = false
     enable = false
     # Google Analytics
     [params.analytics.google]
-      id = ""
+      id = "G-780QJQWSNY"
+
       # whether to anonymize IP
       # 是否匿名化用户 IP
       anonymizeIP = true
